# PostgresFilling

./: .gitignore  README.md  pyproject.toml
PostgresFilling/: main.py  utils.py
PostgresFilling/db/: operations.py
PostgresFilling/post/: post.py  post_generator.py
tests/: conftest.py  test_db.py  test_post.py
